Fix crashing Kopete when moving or deleting contact

BUG: 229996

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1322413